syntax = "proto3";

package connection;

import "google/protobuf/any.proto";

service Minecraft {
  rpc Connection(stream Packet) returns (stream Packet) {}
  rpc Status(StatusRequest) returns (StatusResponse) {}
  rpc Reserve_slots(ReserveSlotsRequest) returns (ReserveSlotsResponse) {}
}

message StatusRequest {
}

message StatusResponse {
  bytes id = 1;
  int32 num_players = 2;
  string server_type = 3;
}

message ReserveSlotsRequest {
  repeated UUID players = 1;
}

message ReserveSlotsResponse {
  bool can_join = 1;
  string msg = 2;
}

message Packet {
  int32 id                     = 1;
  repeated bool bools          = 2;
  bytes bytes                  = 3;
  // There is no int16 type in protobuf. This is here to keep the packets the same as their packet definitions
  repeated int32 shorts        = 4;
  repeated int32 ints          = 5;
  repeated uint64 longs        = 6;
  repeated float floats        = 7;
  repeated double doubles      = 8;
  repeated string strs         = 9;
  repeated UUID uuids          = 10;
  repeated uint64 positions    = 11;
  repeated bytes NBTTags       = 12;
  repeated bytes byte_arrs     = 13;
  repeated IntArray int_arrs   = 14;
  repeated LongArray long_arrs = 15;
  repeated StrArray str_arrs   = 16;
  google.protobuf.Any other    = 17;
}

message UUID {
  bytes be_data = 1;
}
message IntArray {
  repeated int32 ints = 1;
}
message LongArray {
  repeated uint64 longs = 1;
}
message StrArray {
  repeated string strs = 1;
}

message Item {
  bool present = 1;
  int32 ID = 2;
  int32 count = 3; // minecraft stores this as a byte, so it should never by higher than 255
  bytes NBT = 4;
}

message Node {
  int32 flags = 1;
  repeated int32 children = 2;
  int32 redirect = 3;
  string name = 4;
  string parser = 5;
  bytes properties = 6;
  string suggestion = 7;
}

message TabCompleteSection {
  string match = 1;
  bool hasTooltip = 2; // true if the following is present
  string tooltip = 3; // json chat tooltip to display above where the user is typing
}

message BossBar {
  UUID uuid = 1;
  string title = 2;
  float value = 3;
  int32 color = 4;
  int32 division = 5;
  int32 flags = 6;
}

message MultiBlockChange {
  int32 blockState = 1;
  int32 x = 2;
  int32 y = 3;
  int32 z = 4;
}

message Chunk {
  int32 x = 1;
  int32 z = 2;
  map<int32, Section> sections = 3;
  repeated bytes blockEntities = 4; // repeated nbt tags
  repeated uint64 heightmap = 5;

  message Section {
    repeated uint32 palette = 1;
    int32 bitsPerBlock = 2;
    int32 nonAirBlocks = 3;
    bytes data = 4;
  }
}

message Map {
  int32 id = 1;
  int32 scale = 2;
  bool showPlayer = 3;
  bool locked = 4;
  repeated Icon icons = 5;
  int32 columns = 6;
  int32 rows = 7;
  int32 xOffset = 8;
  int32 zOffset = 9;
  bytes data = 10; // the image data of the map

  message Icon {
    int32 type = 1;
    int32 x = 2;
    int32 z = 3;
    int32 direction = 4;
    bool hasName = 5;
    string name = 6;
  }
}

message EntityMetadata {
  map<int32, EntityMetadataField> values = 1;
}

message EntityMetadataField {
  int32 index = 1;
  int32 type = 2;
  bytes data = 3;
}

message EntityProperty {
  string name = 1;
  double value = 2;
}
